Update Understanding and Predicting Property Maintenance Fines.ipynb
Changed the file locations for the csvs

--- a/Understanding and Predicting Property Maintenance Fines.ipynb
+++ b/Understanding and Predicting Property Maintenance Fines.ipynb
@@ -107,10 +107,10 @@
     "    from sklearn.model_selection import train_test_split\n",
     "    from sklearn.metrics import roc_auc_score\n",
     "    \n",
-    "    train = pd.read_csv(r\"C:\\Users\\blord\\Documents\\Code Projects\\Coursera\\Applied Machine Learning in Python\\Files\\home\\jovyan\\work\\readonly\\train.csv\", encoding = \"ISO-8859-1\")\n",
-    "    test = pd.read_csv(r\"C:\\Users\\blord\\Documents\\Code Projects\\Coursera\\Applied Machine Learning in Python\\Files\\home\\jovyan\\work\\readonly\\test.csv\")\n",
-    "    addresses = pd.read_csv(r\"C:\\Users\\blord\\Documents\\Code Projects\\Coursera\\Applied Machine Learning in Python\\Files\\home\\jovyan\\work\\readonly\\addresses.csv\")\n",
-    "    latlons = pd.read_csv(r\"C:\\Users\\blord\\Documents\\Code Projects\\Coursera\\Applied Machine Learning in Python\\Files\\home\\jovyan\\work\\readonly\\latlons.csv\")\n",
+    "    train = pd.read_csv(r"train.csv\", encoding = \"ISO-8859-1\")\n",
+    "    test = pd.read_csv(r"test.csv\")\n",
+    "    addresses = pd.read_csv(r"addresses.csv\")\n",
+    "    latlons = pd.read_csv(r"latlons.csv\")\n",
     "\n",
     "#     train = train.set_index('ticket_id')\n",
     "    train = train[~(np.isnan(train['compliance']))]\n",
